# local-s3

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: PLAN-secrets-manager.md  PLAN.md  PRD-dynamodb.md  PRD-secrets-manager.md  PROJECT-dynamodb.md  PROJECT-secrets-manager.md  PROJECT.md  ROADMAP-dynamodb.md  ROADMAP-secrets-manager.md  ROADMAP.md  STATE-dynamodb.md  STATE-secrets-manager.md  STATE.md
src/: error.rs  lib.rs  main.rs  middleware.rs  server.rs
src/routes/: bucket.rs  object.rs
src/secretsmanager/: dispatcher.rs  error.rs  mod.rs  storage.rs  types.rs
src/storage/: filesystem.rs  mod.rs
src/types/: bucket.rs  headers.rs  mod.rs  object.rs  xml.rs
tests/: bucket_integration.rs  object_integration.rs  secretsmanager_integration.rs  versioning_integration.rs
