[package]
name = "local-s3"
version = "0.1.0"
edition = "2024"
description = "A fast, lightweight S3-compatible server for local development"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
